--- a/ejercicio2/index.html
+++ b/ejercicio2/index.html
@@ -17,6 +17,8 @@
   <p class="fn-remove-me">Eliminame!</p>
   <p>No me elimines!</p>
 	<div></div><div></div>
+  <div class="primerDiv"></div>
+  <div class="segundoDiv"></div>
 	<div class="fn-insert-here"></div>
   <div class="fn-insert-here"></div>
 </body>
