--- a/ejercicio4/index.html
+++ b/ejercicio4/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <script src="ejercicio4.js" defer></script>
+    <title>Ejercicio 4</title>
 </head>
 <body>
 	<input class="click" type="text"/>
